--- a/ico.html
+++ b/ico.html
@@ -108,14 +108,14 @@
                 <div class="center-two">
                     <p class="center-text">Seek <br>
                         financing</p>
-                    <div class="icon">
-                        <img src="img/why-icon3.png" alt="">
-                        <p>Online Platform</p>
-                    </div>
-                    <p class="center-text-two">Search for and <br>
-                        Invest in Project</p>
                 </div>
-                <div class="center-three">
+                <div class="icon">
+                    <img src="img/why-icon3.png" alt="">
+                    <p>Online Platform</p>
+                </div>
+                <p class="center-three">Search for and <br>
+                    Invest in Project <br></p>
+                <div class="center-four">
                     <img src="img/why-icon4.png" alt="">
                     <p>Investors</p>
                 </div>
@@ -132,12 +132,18 @@
         <p>Blockchain technology is predicted to disrupt at least few of the following industries.</p>
         <div class="app-items">
             <div class="app-icons">
-                <div><img src="img/app-icon1.png" alt=""></div>
-                    <div><img src="img/app-icon2.png" alt=""></div>
-                        <div><img src="img/app-icon3.png" alt=""></div>
-                            <div><img src="img/app-icon4.png" alt=""></div>
-                                <div><img src="img/app-icon5.png" alt=""></div>
-                                    <div><img src="img/app-icon6.png" alt=""></div>
+                <div><img src="img/app-icon1.png" alt="">
+                </div>
+                    <div><img src="img/app-icon2.png" alt="">
+                    </div>
+                        <div><img src="img/app-icon3.png" alt="">
+                        </div>
+                            <div><img src="img/app-icon4.png" alt="">
+                            </div>
+                                <div><img src="img/app-icon5.png" alt="">
+                                </div>
+                                    <div><img src="img/app-icon6.png" alt="">
+                                    </div>
                                     </div>
                                     <div class="app-text">
                                         <p>Retail</p>
