--- a/index.html
+++ b/index.html
@@ -321,22 +321,17 @@
                                                                         <p>Social media</p>
                                                                         
                                                                         <a href="#">
-                                                                        <img src="img/facebook.svg" alt="" class="social-">
+                                                                        <img src="facebook.svg" alt="" class="social-">
                                                                         </a>
                                                                         <a href="#">
-                                                                        <img src="img/instagram.svg" alt="" class="social-">
+                                                                        <img src="instagram.svg" alt="" class="social-">
                                                                         </a>
                                                                         <a href="#">
-                                                                        <img src="img/linkedin.svg" alt="" class="social-">
+                                                                        <img src="linkedin.svg" alt="" class="social-">
                                                                         </a>
  																</div>
  															</div>
-                                                                        <img src="img/logo.png" alt="">
-                                                                        <p>Social media</p>
-                                                                        <img src="" alt="">
-                                                                        <img src="" alt="">
-                                                                        <img src="" alt="">
-            </div>
+                                                                       
                                                                         <div class="copyright">
                                                                             <p>All rights reserved GoFriends © 2013-2018</p>
                                                                             <a href="">Privacy Policy</a>
