--- a/index.html
+++ b/index.html
@@ -296,8 +296,7 @@
                                                                     </div>
                                                                     <div class="contact-info">
                                                                         <p class="contact-one">Contact info</p>
-                                                                        <p class="contact-two">28a Panasa Mirnogo st. <br>
-=======
+                                                                        <p class="contact-two">
                                                                         <p>Pages</p>
                                                                         <ul>
                                                                             <li><a href="#">Home</a></li>
