--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                                                                             </div>
                                                                         </ul>
                                                                     </div>
-                                                                    <div class="contact-info">
+<!--                                                                     <div class="contact-info">
                                                                         <p class="contact-one">Contact info</p>
                                                                         <p class="contact-two">
                                                                         <p>Pages</p>
@@ -307,8 +307,7 @@
                                                                             <li><a href="#">Technologies</a></li>
                                                                             <li><a href="#">Company</a></li>
                                                                         </ul>
-									    </p>
-                                                                    </div>
+                                                                    </div> -->
                                                                     <div class="contact-info">
                                                                         <p>Contact info</p>
                                                                         <p>28a Panasa Mirnogo st. <br>
